# osm-tags-transform

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: run_test_compare_output.cmake
example-configs/: carto-de.lua  nochange.lua  nosource.lua  osml10n-allnames.lua  osml10n.lua  remove-buildings.lua
src/: CMakeLists.txt  handler.cpp  handler.hpp  lua-init.hpp  lua-init.lua  lua-utils.cpp  lua-utils.hpp  main.cpp
test/: CMakeLists.txt  input-buildings.opl  input-source.opl  output-buildings.opl  output-help.txt  output-source.opl
